--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -18,7 +18,7 @@ th {
 }
 
 
-.centralizar, h1{   
+/* .centralizar, h1{   
 
 display: flex;
 flex-direction: row;
@@ -26,7 +26,7 @@ justify-content: center;
 align-items: center;
 margin-bottom: 10px;
 margin-top: 10px;
-}
+} */
 
 .centralizarInput{   
 
@@ -49,3 +49,21 @@ margin-top: 10px;
     .corFont{
       color: blue;
     }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
