--- a/front-end/src/Pages/Seguradoras/cad.css
+++ b/front-end/src/Pages/Seguradoras/cad.css
@@ -34,6 +34,17 @@ body {font-family: Arial, Helvetica, sans-serif;}
   background-color: rgb(252, 4, 4);  
 }
 
+#buttonInfo {
+  background-color: rgb(76, 156, 148);  
+}
+#buttonInfo:hover {
+  background-color: rgb(69, 124, 150);  
+}
+
+
+
+
+
 .form-inline button:hover {
   background-color: royalblue;
 }
