--- a/front-end/src/Pages/Seguradoras/cad.css
+++ b/front-end/src/Pages/Seguradoras/cad.css
@@ -20,7 +20,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   
 }
 
-.form-inline button {
+.form-inline buttonA {
   padding: 10px 20px;
   background-color: dodgerblue;
   border: 1px solid #ddd;
@@ -45,7 +45,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 
 
-.form-inline button:hover {
+.form-inline buttonA:hover {
   background-color: royalblue;
 }
 
