--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -49,8 +49,16 @@ margin-top: 10px;
     .corFont{
       color: blue;
     }
+    input[type="number"]::-webkit-outer-spin-button,
+    input[type="number"]::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+    input[type="number"] {
+        -moz-appearance: textfield;
+    }
 
-
+   
 
 
 
