--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,21 +1,4 @@
 
-.ag-theme-alpine .ag-header-cell-label {
-  font-style: italic;
-
- 
-}
-.ag-theme-alpine .ag-cell-label {
-  border: 1px solid;
- 
-}
-
-th {
-  border: 1px solid;    
-  margin : 0, auto;  
-  padding-left: 5px;
-  padding-right: 10px;
-  
-}
 
 
 /* .centralizar, h1{   
@@ -58,6 +41,17 @@ margin-top: 10px;
         -moz-appearance: textfield;
     }
 
+    .btnMenu{
+     width: 100%  ;
+     margin-bottom: 5px;
+    }
+
+    .fontMenu{
+      font-size: 11px;
+    }
+
+
+   
    
 
 
