--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -11,7 +11,7 @@ margin-bottom: 10px;
 margin-top: 10px;
 } */
 
-.centralizarInput{   
+.centralizar{   
 
   text-align: center;
   flex-direction: row;
