--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -49,7 +49,27 @@ margin-top: 10px;
     .fontMenu{
       font-size: 11px;
     }
+    .abaTable{
+      background-color: rgb(171, 239, 191);
+    }
 
+    .abaTable1{
+      background-color: pink
+    }
+
+
+
+    #titulos{ 
+      display: block !important;
+      text-align: center;
+      color:#008080 !important;
+      font-weight: 600 !important;
+      background-color: #fff !important;
+      border: none !important;
+      font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      font-size: 20;
+      margin-bottom: 1em;
+    } 
 
    
    
