Atualização grupos de acesso

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -71,6 +71,12 @@ margin-top: 10px;
       margin-bottom: 1em;
     } 
 
+    #centralDiv{
+      background-color: blue;
+      width: 100px;
+      height: 100px;
+    }
+
    
    
 
