--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -87,7 +87,17 @@ margin-top: 10px;
 }
 
 
-
+#titulosLabel{ 
+  display: block !important;
+  color:#008080 !important;
+  font-weight: 600 !important;
+  background-color: #fff !important;
+  border: none !important;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 20;
+  margin-left: 0.5em;
+  margin-top: 1em;
+} 
 
 
 
