--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -107,8 +107,10 @@ margin-top: 10px;
   border: none !important;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 20;
-
+  margin-left: 0.5em;
+  margin-top: 1em;
 } 
+
 
 
 
